# recsys-content-based-filtering

./: .env-example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  feed_data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0873bc51594c_feature_store.py
app/: base_class.py  config.py  main.py
app/crud/: base.py  recommender.py
app/db/: base.py  base_class.py  session.py
app/handler/: exception.py
app/logic/: recommender.py
app/middleware/: auth.py
app/models/: movies.py
app/routes/: recommender.py
app/schemas/: base.py  recommender.py
app/utils/: response_builder.py  time.py
scripts/: download.sh  migrate.sh
